[FIX] Background color app in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 :root {
   --bg-col-primary: #28559A;
   --bg-col-secondary: #DDEDF4;
+  --bg-app: #fff;
   --txt-col-primary: #DDEDF4;
   --txt-col-secondary: #28559A;
 }
@@ -10,6 +11,7 @@
 .app.dark-mode {
   --bg-col-primary: #0F2557;
   --bg-col-secondary: #28559A;
+  --bg-app: gold;
   --txt-col-primary: #DDEDF4;
   --txt-col-secondary: #DDEDF4;
 }
@@ -18,6 +20,7 @@
   max-width: 100vw;
   height: auto;
   overflow: hidden;
+  background: var(--bg-app);
 }
 
 .appContainer {
